--- a/Support-bank.csproj
+++ b/Support-bank.csproj
@@ -8,5 +8,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="NLog" Version="5.0.0-rc2"/>
+    <PackageReference Include="Json.Net" Version="1.0.33"/>
   </ItemGroup>
 </Project>
