--- a/Support-bank.csproj
+++ b/Support-bank.csproj
@@ -7,7 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="NLog" Version="5.0.0-rc2"/>
-    <PackageReference Include="Json.Net" Version="1.0.33"/>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="NLog" Version="5.0.0-rc2" />
+    <PackageReference Include="Json.Net" Version="1.0.33" />
   </ItemGroup>
 </Project>
